# yuzj_linux_workshop

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  CMakeLists.txt  License.md  Readme.md  compile-docs.sh  fmt.sh  header.tex  lab2.md  lab3.md  lab4.md  quiz1.md
deprecated/lab4/: Readme.md
deprecated/lab4/busybox_initramfs/etc/: fstab
deprecated/lab4/src/: reproduce.sh
docs/: Readme.md  dl-docs.sh
lab1/: Readme.md  quiz1.md
lab2/: Readme.md
lab2/01_shell_scp/: .gitignore  Readme.md  build.sh  clean.sh
lab2/01_shell_scp/cond_comp/: test.c
lab2/02_libtool_scp/: Makefile  Readme.md
lab2/03_autotools_scp/: .gitignore  Makefile.am  NEWS  Readme.md  build.sh  clean.sh  configure.ac
lab2/03_autotools_scp/proj/: .gitignore  configure.ac  stupid.texi
lab2/04_cmake_scp/: .gitignore  CMakeLists.txt  Readme.md  build.sh  clean.sh
lab2/autotools_scp/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  configure.ac
lab2/cmake_scp/: .gitignore
lab2/libtool_scp/: Makefile  Readme.md
lab2/shell_scp/: .gitignore  build.sh
lab2/src/: Readme.md  main.c  stupid.c  stupid.h
lab3/: Readme.md
lab3/opt/: .gitignore  reproduce.sh
lab3/src/: reproduce.sh
lab4/: Readme.md  hello.c  linux.ini
lab4/busybox_initramfs/: init
lab4/src/: Readme.md  reproduce.sh
lfs/: Readme.md  busybox.conf
lfs/busybox_initramfs/: init
src/: Readme.md  reproduce.sh
stupid_c_progs/: Readme.md
stupid_c_progs/cmake_scp/: CMakeLists.txt  Readme.md
stupid_c_progs/libtool_scp/: Makefile  Readme.md
stupid_c_progs/shell_scp/: Readme.md  build.sh
stupid_c_progs/src/: .gitignore  stupid.h
